KAlarm Change Log

=== Version 3.4.0 (KDE Applications 22.04) --- 9 February 2022 ===
* Allow calendars and date picker to be shown together in side panel [KDE Bug 440250]
* Shrink calendar list to remove empty space when too large.
* If audio alarm edit dialogue is closed after clicking Try, cancel sound file playback.

=== Version 3.3.6 (KDE Applications 21.12.3) --- 9 February 2022 ===
* Fix failure to create a missing calendar file after enabling a resource.

=== Version 3.3.5 (KDE Applications 21.12.2) --- 31 January 2022 ===
* Fix crash after Defer is selected in alarm notification message [KDE Bug 448212]
* Fix deleted calendar resources reappearing when KAlarm restarts.
* For command alarms, use path to find executables, instead of current directory.
* Fix regression introduced in version 3.1.0:
    Make auto-close work for message windows.

=== Version 3.3.4 (KDE Applications 21.12.1) --- 28 December 2021 ===
* Treat empty read-only, or non-existent, calendar files as loaded.
* Fix bad calendar files preventing command line actions from running.
* Ensure KAlarm command line actions are performed if KAlarm is already running [KDE Bug 446749]
* Don't disable alarms after KAlarm command line action while KAlarm is already running [KDE Bug 446749]
* Fix resource ID numbers not working in command line & DBUS commands.
* If KAlarm is already running, don't exit if a new activation has unknown command line options.
* Fix crash when a resource is removed.

=== Version 3.3.3 (KDE Applications 21.12) --- 7 November 2021 ===
* Show numbers in localised form.
* Make time edit spinboxes show time using localised format and numbers.
* Fix infinite loop due to invalid recurrence date when using locale with non-ASCII numbers (requires kalarmcal 21.12).

=== Version 3.3.2 (KDE Applications 21.08.3) --- 30 October 2021 ===
* Make time edit field arrows work with Breeze application style [KDE Bug 443062]
* Fix display errors in time edit field arrows.